# Drift

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  anomaly_detector.py  app.py  pyproject.toml  requirements.txt  setup.py  test_flask_app.py
docs/: advanced.md  api-reference.md  configuration.md  getting-started.md  metrics-guide.md  troubleshooting.md
drift/: __init__.py  config.py  exceptions.py  monitor.py
drift/algorithms/: __init__.py  cumsum.py  ewma.py
drift/collectors/: __init__.py  system.py
drift/notifiers/: __init__.py  discord.py
examples/: basic_usage.py  custom_metrics.py  fastapi_integration.py  flask_integration.py
tests/: __init__.py  test_algorithms.py  test_collectors.py  test_monitor.py  test_notifiers.py
